# OSINT-status-checker

./: .example.env  .gitignore  README.md  docker-compose.yml  docker_compose.yml  example.env
analysis/: graph.py  requirements.txt  test.ipynb
backend/: Dockerfile  pyproject.toml
backend/src/: lifespan.py  main.py
backend/src/routers/: status.py  user.py
backend/src/storages/mongo/: status.py  user.py
frontend/: Dockerfile  config.py  graph.py  main.py  requirements.txt  statistics.py  test.ipynb  users.py
frontend/src/: Main.py  config.py  graph.py  graph_utils.py  main.py  statistics.py  statistics_utils.py  users_utils.py
frontend/src/pages/: Statistics.py  Statistics_per_User.py  Users.py  statistics.py
scripts/: vm_push_example.py
src/: status_parser.py  test.py
tg_scrapper/: Dockerfile  pyproject.toml  requirements.txt
tg_scrapper/src/: __main__.py  browser.py  lifespan.py  main.py  models.py  pyrogram_status_parser.py  scrapper.py  user.py
tg_scrapper/src/routers/: qr.py  user.py
